# nagios-nagtrap

./: Makefile  Makefile.in  README.md  config.status  configure  configure.in  subst  subst.in
db/: nagtrap-1.5.sql
doc/: ChangeLog  INSTALL  THANKS  VENDORS
etc/: Makefile  Makefile.in  config.ini.php-dist
etc/apache2/: nagtrap.conf  nagtrap.conf.in
plugin/: Makefile  Makefile.in  check_jobs.pl  check_jobs.pl.in  check_snmptraps.pl  check_snmptraps.pl.in
share/: Makefile  Makefile.in  index.php
share/include/classes/: class.common.php  class.frontend.php  class.main.php  class.mysqlDB.php
share/include/css/: nagtrap.css
share/include/defines/: global.php  global.php.in
share/include/js/: nagtrap.js
share/include/xml/language/.svn/: all-wcprops  entries
share/include/xml/language/DE/: error.xml
share/include/xml/language/DE/.svn/: all-wcprops  entries
share/include/xml/language/EN/: main.xml
share/include/xml/language/EN/.svn/: all-wcprops  entries
